<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.gbif</groupId>
    <artifactId>motherpom</artifactId>
    <version>61</version>
  </parent>

  <artifactId>gbif-metadata-profile</artifactId>
  <version>2.11-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>GBIF Common :: Metadata profile</name>
  <description>Model and serialization utilities for the GBIF metadata profile
    found at https://rs.gbif.org/schema/eml-gbif-profile/</description>
  <url>https://github.com/gbif/${project.artifactId}</url>

  <modules>
    <module>gbif-metadata-common</module>
    <module>gbif-metadata-profile-dc</module>
    <module>gbif-metadata-profile-eml</module>
  </modules>

  <properties>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <java.version>11</java.version>

    <main.basedir>${project.basedir}</main.basedir>

    <gbif-api.version>2.1.18</gbif-api.version>
    <gbif-common.version>0.60</gbif-common.version>
    <gbif-parsers.version>0.67</gbif-parsers.version>

    <commons-beanutils.version>1.11.0</commons-beanutils.version>
    <commons-digester3.version>3.2</commons-digester3.version>
    <commons-io.version>2.20.0</commons-io.version>
    <commons-lang.version>3.19.0</commons-lang.version>
    <freemarker.version>2.3.34</freemarker.version>
    <junit.version>5.14.0</junit.version>
    <slf4j.version>2.0.17</slf4j.version>
    <jsr305.version>3.0.2</jsr305.version>
    <jsoup.version>1.21.2</jsoup.version>
  </properties>

  <scm>
    <connection>scm:git:git@github.com:gbif/${project.artifactId}.git</connection>
    <url>https://github.com/gbif/${project.artifactId}</url>
    <developerConnection>scm:git:git@github.com:gbif/${project.artifactId}.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <repositories>
    <repository>
      <id>gbif-all</id>
      <url>https://repository.gbif.org/content/groups/gbif/</url>
    </repository>
  </repositories>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.gbif</groupId>
        <artifactId>gbif-metadata-common</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.gbif</groupId>
        <artifactId>gbif-api</artifactId>
        <version>${gbif-api.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>*</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.gbif</groupId>
        <artifactId>gbif-common</artifactId>
        <version>${gbif-common.version}</version>
      </dependency>
      <dependency>
        <groupId>org.gbif</groupId>
        <artifactId>gbif-parsers</artifactId>
        <version>${gbif-parsers.version}</version>
        <exclusions>
          <exclusion>
            <groupId>org.gbif</groupId>
            <artifactId>name-parser-v1</artifactId>
          </exclusion>
        </exclusions>
      </dependency>

      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>${commons-beanutils.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-digester3</artifactId>
        <version>${commons-digester3.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang.version}</version>
      </dependency>
      <dependency>
        <groupId>org.freemarker</groupId>
        <artifactId>freemarker</artifactId>
        <version>${freemarker.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>
      <!-- Java HTML Parser to conveniently extract license url and title from rights statement -->
      <dependency>
        <groupId>org.jsoup</groupId>
        <artifactId>jsoup</artifactId>
        <version>${jsoup.version}</version>
      </dependency>
      <!-- Annotations -->
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>${jsr305.version}</version>
      </dependency>

      <!-- Test -->
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-engine</artifactId>
        <version>${junit.version}</version>
        <scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless-maven-plugin.version}</version>
      </plugin>
    </plugins>
  </build>
</project>
